vivado/214/proj_extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c/solution1/solution1.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 5ns.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c' ... 
INFO: [HLS 200-111] Finished Linking Time (s): cpu = 00:00:41 ; elapsed = 00:01:59 . Memory (MB): peak = 832.453 ; gain = 132.133 ; free physical = 21689 ; free virtual = 44535
INFO: [HLS 200-111] Finished Checking Pragmas Time (s): cpu = 00:00:41 ; elapsed = 00:01:59 . Memory (MB): peak = 832.453 ; gain = 132.133 ; free physical = 21689 ; free virtual = 44535
INFO: [HLS 200-10] Starting code transformations ...
INFO: [HLS 200-111] Finished Standard Transforms Time (s): cpu = 00:00:42 ; elapsed = 00:02:01 . Memory (MB): peak = 832.453 ; gain = 132.133 ; free physical = 21690 ; free virtual = 44535
INFO: [HLS 200-10] Checking synthesizability ...
ERROR: [SYNCHK 200-11] extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c:68: Argument 'SiS_Pr.SiS_RefIndex.Ext_CRT2CRTC' of function 'SiS_GetCRT2Ptr' (extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c:68) has an unsynthesizable type (possible cause(s): pointer to pointer or global pointer).
ERROR: [SYNCHK 200-61] extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c:75: unsupported memory access on variable 'SiS_Pr.SiS_SModeIDTable.St_CRT2CRTC' which is (or contains) an array with unknown size at compile time.
WARNING: [SYNCHK 200-77] The top function 'main' has no outputs. Possible cause(s) are: (1) Output parameters are passed by value; (2) intended outputs (parameters or global variables) are never written; (3) there are infinite loops.
INFO: [SYNCHK 200-10] 2 error(s), 1 warning(s).
ERROR: [HLS 200-70] Synthesizability check failed.
INFO: [HLS 200-10] Creating and opening project '/home/vivado/aut/proj_extr_.linuxdriversttyserialip22zilog.c_ip22zilog_convert_to_zs_with_main.c'.
INFO: [HLS 200-10] Adding design file 'extr_.linuxdriversttyserialip22zilog.c_ip22zilog_convert_to_zs_with_main.c' to the project
INFO: [HLS 200-10] Creating and opening solution '/home/vivado/aut/proj_extr_.linuxdriversttyserialip22zilog.c_ip22zilog_convert_to_zs_with_main.c/solution1'.
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7k160t-fbg484-1'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c' ... 
INFO: [HLS 200-111] Finished Linking Time (s): cpu = 00:00:13 ; elapsed = 00:00:40 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 28019 ; free virtual = 39379
INFO: [HLS 200-111] Finished Checking Pragmas Time (s): cpu = 00:00:13 ; elapsed = 00:00:40 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 28019 ; free virtual = 39379
INFO: [HLS 200-10] Starting code transformations ...
INFO: [HLS 200-111] Finished Standard Transforms Time (s): cpu = 00:00:15 ; elapsed = 00:00:42 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 28018 ; free virtual = 39378
INFO: [HLS 200-10] Checking synthesizability ...
ERROR: [SYNCHK 200-11] extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c:68: Argument 'SiS_Pr.SiS_RefIndex.Ext_CRT2CRTC' of function 'SiS_GetCRT2Ptr' (extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c:68) has an unsynthesizable type (possible cause(s): pointer to pointer or global pointer).
ERROR: [SYNCHK 200-61] extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c:75: unsupported memory access on variable 'SiS_Pr.SiS_SModeIDTable.St_CRT2CRTC' which is (or contains) an array with unknown size at compile time.
WARNING: [SYNCHK 200-77] The top function 'main' has no outputs. Possible cause(s) are: (1) Output parameters are passed by value; (2) intended outputs (parameters or global variables) are never written; (3) there are infinite loops.
INFO: [SYNCHK 200-10] 2 error(s), 1 warning(s).
ERROR: [HLS 200-70] Synthesizability check failed.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c:1:
extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c:15:266: error: array has incomplete element type 'TYPE_3__' (aka 'struct TYPE_6__')
struct SiS_Private {int SiS_VBType; scalar_t__ SiS_IF_DEF_LVDS; int SiS_VBInfo; unsigned short SiS_LCDResInfo; int SiS_SetFlag; int SiS_LCDInfo; int SiS_TVMode; scalar_t__ SiS_ModeType; scalar_t__ SiS_CHSOverScan; scalar_t__ SiS_IF_DEF_CH70xx; TYPE_3__ SiS_RefIndex[10]; TYPE_2__ SiS_EModeIDTable[10]; TYPE_1__ SiS_SModeIDTable[10]; } ;
                                                                                                                                                                                                                                                                         ^
extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c:10:16: note: forward declaration of 'struct TYPE_6__'
typedef struct TYPE_6__ TYPE_3__ ;
               ^
extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c:15:297: error: array has incomplete element type 'TYPE_2__' (aka 'struct TYPE_5__')
struct SiS_Private {int SiS_VBType; scalar_t__ SiS_IF_DEF_LVDS; int SiS_VBInfo; unsigned short SiS_LCDResInfo; int SiS_SetFlag; int SiS_LCDInfo; int SiS_TVMode; scalar_t__ SiS_ModeType; scalar_t__ SiS_CHSOverScan; scalar_t__ SiS_IF_DEF_CH70xx; TYPE_3__ SiS_RefIndex[10]; TYPE_2__ SiS_EModeIDTable[10]; TYPE_1__ SiS_SModeIDTable[10]; } ;
                                                                                                                                                                                                                                                                                                        ^
extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c:11:16: note: forward declaration of 'struct TYPE_5__'
typedef struct TYPE_5__ TYPE_2__ ;
               ^
extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c:15:328: error: array has incomplete element type 'TYPE_1__' (aka 'struct TYPE_4__')
struct SiS_Private {int SiS_VBType; scalar_t__ SiS_IF_DEF_LVDS; int SiS_VBInfo; unsigned short SiS_LCDResInfo; int SiS_SetFlag; int SiS_LCDInfo; int SiS_TVMode; scalar_t__ SiS_ModeType; scalar_t__ SiS_CHSOverScan; scalar_t__ SiS_IF_DEF_CH70xx; TYPE_3__ SiS_RefIndex[10]; TYPE_2__ SiS_EModeIDTable[10]; TYPE_1__ SiS_SModeIDTable[10]; } ;
                                                                                                                                                                                                                                                                                                                                       ^
extr_.linuxdriversvideofbdevsisinit301.c_SiS_GetCRT2Ptr_with_main.c:12:16: note: forward declaration of 'struct TYPE_4__'
typedef struct TYPE_4__ TYPE_1__ ;
               ^
3 errors generated.
